force-app/main/default/objects/BalanceAdjustmentParameterization__mdt/BalanceAdjustmentParameterization__mdt.object-meta.xml
<CustomObject>
    <description>Metadado criado para parametrizações exclusivas da jornada de ressarcimento (Ajuste de Saldo) - Bl 15 Jornada 65 [Erik, Lucas e Gustavo]</description>
    <label>Parametrização de Ajuste de Saldo</label>
    <pluralLabel>Parametrizações de Ajuste de Saldo</pluralLabel>
</CustomObject>