force-app/main/default/objects/BalanceAdjustmentParameterization__mdt/fields/CaixaSaldoDados__c.field-meta.xml
<CustomField>
    <fullName>CaixaSaldoDados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caixa de Saldo - Dados</label>
    <type>Checkbox</type>
</CustomField>