force-app/main/default/objects/BalanceAdjustmentParameterization__mdt/fields/CaixaSaldoExistentes__c.field-meta.xml
<CustomField>
    <fullName>CaixaSaldoExistentes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caixa de Saldo Existentes na Linha</label>
    <type>Checkbox</type>
</CustomField>