force-app/main/default/objects/BalanceAdjustmentParameterization__mdt/fields/CaixaSaldoSMSOffNet__c.field-meta.xml
<CustomField>
    <fullName>CaixaSaldoSMSOffNet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caixa de Saldo - SMS (Off Net)</label>
    <type>Checkbox</type>
</CustomField>