force-app/main/default/objects/BalanceAdjustmentParameterization__mdt/fields/CaixaSaldoSMSOnNet__c.field-meta.xml
<CustomField>
    <fullName>CaixaSaldoSMSOnNet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caixa de Saldo - SMS (On Net)</label>
    <type>Checkbox</type>
</CustomField>