force-app/main/default/objects/BalanceAdjustmentParameterization__mdt/fields/CaixaSaldoVozOffNet__c.field-meta.xml
<CustomField>
    <fullName>CaixaSaldoVozOffNet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caixa de Saldo Voz (Off Net)</label>
    <type>Checkbox</type>
</CustomField>