force-app/main/default/objects/BalanceAdjustmentParameterization__mdt/fields/CaixaSaldoVozOnNet__c.field-meta.xml
<CustomField>
    <fullName>CaixaSaldoVozOnNet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caixa de Saldo Voz (On Net)</label>
    <type>Checkbox</type>
</CustomField>