force-app/main/default/objects/BalanceAdjustmentParameterization__mdt/fields/Papel__c.field-meta.xml
<CustomField>
    <fullName>Papel__c</fullName>
    <label>Papel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>