force-app/main/default/objects/BalanceAdjustmentParameterization__mdt/fields/QuantidadeDiasEntreCreditos__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDiasEntreCreditos__c</fullName>
    <label>Quantidade de Dias entre Créditos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>